--- a/index.html
+++ b/index.html
@@ -5,52 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
   
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+  <title>Frontend Mentor | Clipboard landing page</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
 
-	<div class="main-container">
-		<div class="image-container">
-			<img class="bg-pattern" src="images/bg-pattern-desktop.svg" alt=""> 
-			<img class="illustration-woman" src="images/illustration-woman-online-desktop.svg" alt=""> 
-			<img class="illustration-box" src="images/illustration-box-desktop.svg" alt="">
-		</div>
-		<div class="questions-container">
-			<h1>FAQ</h1>
-			<div class="question-container">
-				<p class="question">How many team members can I invite?</p>
-				<img class="button-arrow" src="images/icon-arrow-down.svg" alt="">
-				<p class="answer hidden">You can invite up to 2 additional users on the Free plan. There is no limit on 
-					team members for the Premium plan.</p>
-			</div>
-			<div class="question-container">
-				<p class="question">What is the maximum file upload size?</p>
-				<img class="button-arrow" src="images/icon-arrow-down.svg" alt="">
-				<p class="answer hidden">No more than 2GB. All files in your account must fit your allotted storage space.</p>
-			</div>
-			<div class="question-container">
-				<p class="question">How do I reset my password?</p>
-				<img class="button-arrow" src="images/icon-arrow-down.svg" alt="">
-				<p class="answer hidden">Click “Forgot password” from the login page or “Change password” from your profile page.
-					A reset link will be emailed to you.</p>
-			</div>
-			<div class="question-container">
-				<p class="question">Can I cancel my subscription?</p>
-				<img class="button-arrow" src="images/icon-arrow-down.svg" alt="">
-				<p class="answer hidden">Yes! Send us a message and we’ll process your request no questions asked.</p>
-			</div>
-			<div class="question-container">
-				<p class="question">Do you provide additional support?</p>
-				<img class="button-arrow" src="images/icon-arrow-down.svg" alt="">
-				<p class="answer hidden">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
-			</div>
-		</div>
-	</div>
-  </div>
+  A history of everything you copy
 
-  <script src="script.js"></script>
+  Clipboard allows you to track and organize everything you 
+  copy. Instantly access your clipboard on all your devices.
+
+  Download for iOS
+  Download for Mac
+
+  Keep track of your snippets
+
+  Clipboard instantly stores any item you copy in the cloud, 
+  meaning you can access your snippets immediately on all your 
+  devices. Our Mac and iOS apps will help you organize everything.
+
+  Quick Search
+
+  Easily search your snippets by content, category, web address, application, and more.
+
+  iCloud Sync
+
+  Instantly saves and syncs snippets across all your devices.
+
+  Complete History
+
+  Retrieve any snippets from the first moment you started using the app.
+
+  Access Clipboard anywhere
+
+  Whether you’re on the go, or at your computer, you can access all your Clipboard 
+  snippets in a few simple clicks.
+
+  Supercharge your workflow
+
+  We’ve got the tools to boost your productivity.
+
+  Create blacklists
+
+  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+
+  Plain text snippets
+
+  Remove unwanted formatting from copied text for a consistent look.
+
+  Sneak preview
+
+  Quick preview of all snippets on your Clipboard for easy access.
+
+  Clipboard for iOS and Mac OS
+
+  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+  and you’re ready to start adding to your clipboard.
+
+  Download for iOS
+  Download for Mac
+
+  FAQs
+  Contact Us
+  Privacy Policy
+  Press Kit
+  Install Guide
+  
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+  </footer>
 </body>
 </html>
