--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Landing page challange from Frontendmentor">
@@ -100,14 +99,14 @@
       <img class="w-14 mb-10 md:mb-0 mx-auto md:mx-0" src="images/logo.svg" alt="logo">
       <nav>
         <ul class="text-gray-500 font-semibold text-center md:text-left flex flex-col gap-5 md:flex-row flex-wrap md:gap-x-20">
-          <div>
-            <li class=""><a href="#">FAQs</a></li>
-            <li class="mt-5 md:mt-3"><a href="#">Contact Us</a></li>
-          </div>
-          <div>
-            <li><a href="#">Install Guide</a></li>
-            <li class="mt-5 md:mt-3"><a href="#">Privacy Policy</a></li>
-          </div>
+          <li>
+            <p class=""><a href="#">FAQs</a></p>
+            <p class="mt-5 md:mt-3"><a href="#">Contact Us</a></p>
+          </li>
+          <li>
+            <p><a href="#">Install Guide</a></p>
+            <p class="mt-5 md:mt-3"><a href="#">Privacy Policy</a></p>
+          </li>
           <li><a href="#">Press Kit</a></li>
         </ul>
       </nav>
